gke-k8s/l7-lb/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpclb-deployment
  labels:
    app: servers
spec:
  replicas: 3
  selector:
    matchLabels:
      app: servers
  template:
    metadata:
      labels:
        app: servers
    spec:
      containers:
      - name: server-container
        image: nileshsimaria/timeserver:v5
        resources:
          limits:
            memory: 512Mi
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /_ah/health
            port: 50051
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /_ah/health
            scheme: HTTPS
            port: 50051
        ports:
        - containerPort: 50051
          protocol: TCP                
        command: ["/src/timeserver"]
        args: ["--port", ":50051"]
