gke-k8s/l7-lb/server-ingress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-ingress-service
  labels:
    type: server-ingress-service
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"servport":"HTTP2"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort 
  ports:
  - name: servport
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: servers
