gke-k8s/l7-lb/server-lb-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server-lb-service
  labels:
    type: server-lb-service
  annotations:
    service.alpha.kubernetes.io/app-protocols: '{"servport":"HTTP2"}'
spec:
  type: LoadBalancer  
  ports:
  - name: servport
    port: 50051
    protocol: TCP
    targetPort: 50051
  selector:
    app: servers
