gke-k8s/l7-lb/server-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    kubernetes.io/ingress.allow-http: "false"   
spec:
  tls:
  - hosts:
    - timeserver.gke.net
    secretName: server-secret
  backend:
    serviceName: server-ingress-service
    servicePort: 50051
